--- a/results.html
+++ b/results.html
@@ -9,79 +9,28 @@
 </head>
 <body>
 
-<h1>title 1</h1>
-<div>
+<h1>title 1</h1><div>
 
     <ul class="bar-graph">
-        <li class="bar-graph-axis">
-            <div class="bar-graph-label">100%</div>
-            <div class="bar-graph-label">80%</div>
-            <div class="bar-graph-label">60%</div>
-            <div class="bar-graph-label">40%</div>
-            <div class="bar-graph-label">20%</div>
-            <div class="bar-graph-label">0%</div>
-        </li>
-        <li class="bar primary" style="height: 95%;" title="95">
-            <div class="percent">95<span>%</span></div>
-            <div class="description">Yetis</div>
-        </li>
-        <li class="bar secondary" style="height: 90%;" title="90">
-            <div class="percent">90<span>%</span></div>
-            <div class="description">ZURBians</div>
-        </li>
-        <li class="bar success" style="height: 80%;" title="80">
-            <div class="percent">80<span>%</span></div>
-            <div class="description">Cows</div>
-        </li>
-        <li class="bar warning" style="height: 75%;" title="75">
-            <div class="percent">75<span>%</span></div>
-            <div class="description">Cows that think they're Yetis</div>
-        </li>
-        <li class="bar alert" style="height: 40%;" title="40">
-            <div class="percent">40<span>%</span></div>
-            <div class="description">Who knows</div>
-        </li>
-    </ul>
+
+
+        <li class="bar-graph-axis"><div class="bar-graph-label">5.0</div>
+<div class="bar-graph-label">4.0</div>
+<div class="bar-graph-label">3.0</div>
+<div class="bar-graph-label">2.0</div>
+<div class="bar-graph-label">1.0</div>
+<div class="bar-graph-label">0</div>
+</li>
+
+
+        <li class="bar primary" style="height: 0.7254106%;" title =testAdd>
+            <div class="percent">3.627053<span></span></div>
+            <div class="description">testAdd</div>
+        </li><li class="bar primary" style="height: 0.863456%;" title =testGet>
+            <div class="percent">4.31728<span></span></div>
+            <div class="description">testGet</div>
+        </li></ul>
+
 </div>
-
-
-<h1>title 2</h1>
-
-<div>
-    <ul class="bar-graph">
-        <li class="bar-graph-axis">
-            <div class="bar-graph-label">100%</div>
-            <div class="bar-graph-label">80%</div>
-            <div class="bar-graph-label">60%</div>
-            <div class="bar-graph-label">40%</div>
-            <div class="bar-graph-label">20%</div>
-            <div class="bar-graph-label">0%</div>
-        </li>
-        <li class="bar primary" style="height: 95%;" title="95">
-            <div class="percent">95<span>%</span></div>
-            <div class="description">Yetis</div>
-        </li>
-        <li class="bar secondary" style="height: 90%;" title="90">
-            <div class="percent">90<span>%</span></div>
-            <div class="description">ZURBians</div>
-        </li>
-        <li class="bar success" style="height: 80%;" title="80">
-            <div class="percent">80<span>%</span></div>
-            <div class="description">Cows</div>
-        </li>
-        <li class="bar warning" style="height: 75%;" title="75">
-            <div class="percent">75<span>%</span></div>
-            <div class="description">Cows that think they're Yetis</div>
-        </li>
-        <li class="bar alert" style="height: 40%;" title="40">
-            <div class="percent">40<span>%</span></div>
-            <div class="description">Who knows</div>
-        </li>
-    </ul>
-</div>
-
-
-
-
 </body>
 </html>
