graphs are scaled properly

--- a/results.html
+++ b/results.html
@@ -20,15 +20,12 @@
 <div class="bar-graph-label">2.0</div>
 <div class="bar-graph-label">1.0</div>
 <div class="bar-graph-label">0</div>
-</li>
-
-
-        <li class="bar primary" style="height: 0.7254106%;" title =testAdd>
-            <div class="percent">3.627053<span></span></div>
-            <div class="description">testAdd</div>
-        </li><li class="bar primary" style="height: 0.863456%;" title =testGet>
-            <div class="percent">4.31728<span></span></div>
-            <div class="description">testGet</div>
+</li><li class="bar primary" style="height: 72.54106%;" title =testAdd>
+<div class="percent">3.627053<span></span></div>
+<div class="description">testAdd</div>
+        </li><li class="bar primary" style="height: 86.3456%;" title =testGet>
+<div class="percent">4.31728<span></span></div>
+<div class="description">testGet</div>
         </li></ul>
 
 </div>
