--- a/results.html
+++ b/results.html
@@ -20,11 +20,11 @@
 <div class="bar-graph-label">2.0</div>
 <div class="bar-graph-label">1.0</div>
 <div class="bar-graph-label">0</div>
-</li><li class="bar primary" style="height: 72.54106%;" title =testAdd>
-<div class="percent">3.627053<span></span></div>
+</li><li class="bar primary" style="height: 89.87885999999999%;" title =testAdd>
+<div class="percent">4.49+/-.43<span>ops/ms</span></div>
 <div class="description">testAdd</div>
-        </li><li class="bar primary" style="height: 86.3456%;" title =testGet>
-<div class="percent">4.31728<span></span></div>
+        </li><li class="bar primary" style="height: 85.21772000000001%;" title =testGet>
+<div class="percent">4.26+/-.57<span>ops/ms</span></div>
 <div class="description">testGet</div>
         </li></ul>
 
