added jdk tests.... revert to before here if everything breaks haha

--- a/results.html
+++ b/results.html
@@ -20,12 +20,12 @@
 <div class="bar-graph-label">2.0</div>
 <div class="bar-graph-label">1.0</div>
 <div class="bar-graph-label">0</div>
-</li><li class="bar primary" style="height: 89.87885999999999%;" title =testAdd>
-<div class="percent">4.49+/-.43<span>ops/ms</span></div>
-<div class="description">testAdd</div>
-        </li><li class="bar primary" style="height: 85.21772000000001%;" title =testGet>
-<div class="percent">4.26+/-.57<span>ops/ms</span></div>
-<div class="description">testGet</div>
+</li><li class="bar primary" style="height: 74.44348%;" title =testAddCustom>
+<div class="percent">3.72+/-0.51<span>ops/ms</span></div>
+<div class="description">testAddCustom</div>
+        </li><li class="bar primary" style="height: 87.47626000000001%;" title =testGetCustom>
+<div class="percent">4.37+/-0.93<span>ops/ms</span></div>
+<div class="description">testGetCustom</div>
         </li></ul>
 
 </div>
