ready to demo... Will likely need to change up a few things

--- a/results.html
+++ b/results.html
@@ -14,18 +14,24 @@
     <ul class="bar-graph">
 
 
-        <li class="bar-graph-axis"><div class="bar-graph-label">5.0</div>
-<div class="bar-graph-label">4.0</div>
-<div class="bar-graph-label">3.0</div>
-<div class="bar-graph-label">2.0</div>
-<div class="bar-graph-label">1.0</div>
+        <li class="bar-graph-axis"><div class="bar-graph-label">8.00</div>
+<div class="bar-graph-label">6.40</div>
+<div class="bar-graph-label">4.80</div>
+<div class="bar-graph-label">3.20</div>
+<div class="bar-graph-label">1.60</div>
 <div class="bar-graph-label">0</div>
-</li><li class="bar primary" style="height: 74.44348%;" title =testAddCustom>
-<div class="percent">3.72+/-0.51<span>ops/ms</span></div>
+</li><li class="bar primary" style="height: 50.520875%;" title =testAddCustom>
+<div class="percent">4.04+/-3.06<span>ops/ms</span></div>
 <div class="description">testAddCustom</div>
-        </li><li class="bar primary" style="height: 87.47626000000001%;" title =testGetCustom>
-<div class="percent">4.37+/-0.93<span>ops/ms</span></div>
+        </li><li class="bar primary" style="height: 99.0235625%;" title =testAddJDK>
+<div class="percent">7.92+/-2.02<span>ops/ms</span></div>
+<div class="description">testAddJDK</div>
+        </li><li class="bar primary" style="height: 53.3056125%;" title =testGetCustom>
+<div class="percent">4.26+/-0.46<span>ops/ms</span></div>
 <div class="description">testGetCustom</div>
+        </li><li class="bar primary" style="height: 59.052712500000005%;" title =testGetJdk>
+<div class="percent">4.72+/-0.32<span>ops/ms</span></div>
+<div class="description">testGetJdk</div>
         </li></ul>
 
 </div>
