--- a/results.html
+++ b/results.html
@@ -9,28 +9,28 @@
 </head>
 <body>
 
-<h1>title 1</h1><div>
+<h1>Test Results</h1><div>
 
     <ul class="bar-graph">
 
 
-        <li class="bar-graph-axis"><div class="bar-graph-label">8.00</div>
-<div class="bar-graph-label">6.40</div>
-<div class="bar-graph-label">4.80</div>
-<div class="bar-graph-label">3.20</div>
-<div class="bar-graph-label">1.60</div>
+        <li class="bar-graph-axis"><div class="bar-graph-label">7.00</div>
+<div class="bar-graph-label">5.60</div>
+<div class="bar-graph-label">4.20</div>
+<div class="bar-graph-label">2.80</div>
+<div class="bar-graph-label">1.40</div>
 <div class="bar-graph-label">0</div>
-</li><li class="bar primary" style="height: 50.520875%;" title =testAddCustom>
-<div class="percent">4.04+/-3.06<span>ops/ms</span></div>
+</li><li class="bar primary" style="height: 65.80597142857143%;" title =testAddCustom>
+<div class="percent">4.61+/-0.89<span>ops/ms</span></div>
 <div class="description">testAddCustom</div>
-        </li><li class="bar primary" style="height: 99.0235625%;" title =testAddJDK>
-<div class="percent">7.92+/-2.02<span>ops/ms</span></div>
+        </li><li class="bar primary" style="height: 90.45325714285714%;" title =testAddJDK>
+<div class="percent">6.33+/-1.39<span>ops/ms</span></div>
 <div class="description">testAddJDK</div>
-        </li><li class="bar primary" style="height: 53.3056125%;" title =testGetCustom>
-<div class="percent">4.26+/-0.46<span>ops/ms</span></div>
+        </li><li class="bar primary" style="height: 56.54748571428571%;" title =testGetCustom>
+<div class="percent">3.96+/-0.84<span>ops/ms</span></div>
 <div class="description">testGetCustom</div>
-        </li><li class="bar primary" style="height: 59.052712500000005%;" title =testGetJdk>
-<div class="percent">4.72+/-0.32<span>ops/ms</span></div>
+        </li><li class="bar primary" style="height: 67.45001428571429%;" title =testGetJdk>
+<div class="percent">4.72+/-1.11<span>ops/ms</span></div>
 <div class="description">testGetJdk</div>
         </li></ul>
 
