made small changes for DL. approved :)

--- a/results.html
+++ b/results.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 
-<h1>Test Results</h1><div>
+<h1>Test Results</h1>
+<h4>TestAdd Custom: The ops/sec for my custom implementation of writing/modifying data in the Hashtable<h4>
+<h4>TestAdd JDK: The ops/sec for the  jdk implementation of writing/modifying data in the Hashtable</h4>
+<h4>TestGet Custom: The ops/sec for my custom implementation of reading a random item from the HT</h4>
+<h4>TestGet JDK: The ops/sec for the jdk implementation of reading random item from the HT</h4><div>
 
     <ul class="bar-graph">
 
@@ -20,17 +24,17 @@
 <div class="bar-graph-label">2.80</div>
 <div class="bar-graph-label">1.40</div>
 <div class="bar-graph-label">0</div>
-</li><li class="bar primary" style="height: 65.80597142857143%;" title =testAddCustom>
-<div class="percent">4.61+/-0.89<span>ops/ms</span></div>
+</li><li class="bar primary" style="height: 49.40092857142857%;" title =testAddCustom>
+<div class="percent">3.46+/-1.21<span>ops/ms</span></div>
 <div class="description">testAddCustom</div>
-        </li><li class="bar primary" style="height: 90.45325714285714%;" title =testAddJDK>
-<div class="percent">6.33+/-1.39<span>ops/ms</span></div>
+        </li><li class="bar primary" style="height: 91.58437142857142%;" title =testAddJDK>
+<div class="percent">6.41+/-3.12<span>ops/ms</span></div>
 <div class="description">testAddJDK</div>
-        </li><li class="bar primary" style="height: 56.54748571428571%;" title =testGetCustom>
-<div class="percent">3.96+/-0.84<span>ops/ms</span></div>
+        </li><li class="bar primary" style="height: 60.8267%;" title =testGetCustom>
+<div class="percent">4.26+/-0.64<span>ops/ms</span></div>
 <div class="description">testGetCustom</div>
-        </li><li class="bar primary" style="height: 67.45001428571429%;" title =testGetJdk>
-<div class="percent">4.72+/-1.11<span>ops/ms</span></div>
+        </li><li class="bar primary" style="height: 65.18165714285715%;" title =testGetJdk>
+<div class="percent">4.56+/-0.28<span>ops/ms</span></div>
 <div class="description">testGetJdk</div>
         </li></ul>
 
